--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -19,7 +19,7 @@ subtitle = "A selection of tech, house and music ideas, projects and things I do
 [sidebar.avatar]
 enabled = true
 local = true
-src = "img/Riles-square.jpg"
+src = "img/Riles-square.png"
 
 [article]
 headingAnchor = false
