--- a/config/_default/_languages.toml
+++ b/config/_default/_languages.toml
@@ -2,5 +2,5 @@
 [en]
 languageName = "English"
 languagedirection = "ltr"
-title = "Andrew Riley - Build, Make and Create"
+title = "Andrew Riley - Build, Make, Create"
 weight = 1
