--- a/config/_default/_languages.toml
+++ b/config/_default/_languages.toml
@@ -4,3 +4,4 @@ languageName = "English"
 languagedirection = "ltr"
 title = "Andrew Riley - Build, Make, Create"
 weight = 1
+timeZone = "Australia/Sydney"
